--- a/package.json
+++ b/package.json
@@ -1,9 +1,36 @@
 {
-    "name": "intelligencejs",
-    "description": "Machine learning library written in javascript",
-    "version": "0.0.1",
-    "private": false,
-    "dependencies": {
-        "nodeunit": "0.9.0"
-    }
+  "name": "intelligence",
+  "description": "Machine learning library written in javascript",
+  "version": "0.0.1",
+  "private": false,
+  "dependencies": {
+    "nodeunit": "0.9.0"
+  },
+  "main": "src/intelligence.js",
+  "directories": {
+    "example": "examples",
+    "test": "tests"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "nodeunit tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Sherlock92/intelligencejs.git"
+  },
+  "keywords": [
+    "machine-learning",
+    "ai",
+    "genetic-algorithm",
+    "genetic-programming",
+    "neural-network",
+    "artificial-intelligence"
+  ],
+  "author": "Daniel Holmes",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sherlock92/intelligencejs/issues"
+  },
+  "homepage": "https://github.com/Sherlock92/intelligencejs"
 }
