--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "version": "0.0.4",
     "private": false,
     "dependencies": {
-        "nodeunit": "0.9.0"
+        "nodeunit": "0.9.0",
+        "proxyquire": "1.0.1"
     },
     "main": "src/intelligence.js",
     "directories": {
