--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "intelligence",
     "description": "Machine learning library written in javascript",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "private": false,
     "dependencies": {
         "nodeunit": "0.9.0",
-        "proxyquire": "1.0.1"
+        "proxyquire": "1.0.1",
+        "node-serialize": "0.0.4",
+        "clone": "0.1.17"
     },
     "main": "src/intelligence.js",
     "directories": {
