--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
     "name": "intelligence",
     "description": "Machine learning library written in javascript",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "private": false,
     "dependencies": {
         "nodeunit": "0.9.0",
         "proxyquire": "1.0.1",
-        "node-serialize": "0.0.4",
         "clone": "0.1.17"
     },
     "main": "src/intelligence.js",
@@ -35,5 +34,5 @@
     "bugs": {
         "url": "https://github.com/Sherlock92/intelligencejs/issues"
     },
-    "homepage": "https://github.com/Sherlock92/intelligencejs"
+    "homepage": "http://sherlock92.github.io/intelligence/"
 }
