--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "intelligence",
     "description": "Machine learning library written in javascript",
-    "version": "0.0.10",
+    "version": "0.0.11",
     "private": false,
     "dependencies": {
         "nodeunit": "0.9.0",
         "proxyquire": "1.0.1",
-        "clone": "0.1.17"
+        "clone": "0.1.17",
+        "node-serialize": "0.0.4"
     },
     "main": "src/intelligence.js",
     "directories": {
@@ -23,13 +24,13 @@
         "url": "https://github.com/Sherlock92/intelligencejs.git"
     },
     "keywords": [
-        "machine-learning",
-        "ai",
-        "genetic-algorithm",
-        "genetic-programming",
-        "neural-network",
-        "artificial-intelligence"
-    ],
+    "machine-learning",
+    "ai",
+    "genetic-algorithm",
+    "genetic-programming",
+    "neural-network",
+    "artificial-intelligence"
+  ],
     "author": "Daniel Holmes",
     "license": "ISC",
     "bugs": {
